--- a/app/globals.css
+++ b/app/globals.css
@@ -75,6 +75,13 @@ body {
   color: var(--foreground);
 }
 
+input:-webkit-autofill {
+  box-shadow: inset 0 0 0 1000px var(--highlighted-background) !important;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+}
+
 @keyframes justify-end-to-start {
   0% {
     justify-content: flex-end;
