creation of SidePanel, Dropdown, PageUnderConstructionMessage comps, creation of all-expenses, my-profile and recent-activity pages, some general adjustments and configure middleware to redirect correctly

--- a/app/globals.css
+++ b/app/globals.css
@@ -158,3 +158,7 @@ input:-webkit-autofill {
 .animate-fade-in {
   animation: fade-in 300ms ease-out forwards;
 }
+
+.animate-spin-slow {
+  animation: spin 10s linear infinite;
+}
