--- a/app/globals.css
+++ b/app/globals.css
@@ -176,3 +176,16 @@ input:-webkit-autofill {
 .animate-border-bottom-color-pulse {
   animation: border-bottom-color-pulse 1.5s ease-in-out infinite;
 }
+
+@keyframes slide-bar {
+  0% {
+    left: -30%;
+  }
+  100% {
+    left: 100%;
+  }
+}
+
+.animate-slide-bar {
+  animation: slide-bar 1s linear infinite;
+}
