--- a/app/globals.css
+++ b/app/globals.css
@@ -10,11 +10,14 @@
     --h-background: #e5e5e5;
     --foreground: #191919;
     --h-foreground: #333333;
+    --s-foreground: #1b5e20;
+    --d-foreground: #b71c1c;
     --primary: #5a7b00;
     --secondary: #191919;
     --info: #1363bf;
     --success: #19944a;
     --warning: #d4a900;
+
     --danger: #c13232;
 
     --header: 72px;
@@ -26,6 +29,8 @@
     --h-background: #333333;
     --foreground: #fefffa;
     --h-foreground: #f2ffcc;
+    --s-foreground: #d4edda;
+    --d-foreground: #f8d7da;
     --primary: #caff33;
     --secondary: #fefffa;
     --info: #a4cfff;
@@ -40,6 +45,8 @@
   --color-h-background: var(--h-background);
   --color-foreground: var(--foreground);
   --color-h-foreground: var(--h-foreground);
+  --color-s-foreground: var(--s-foreground);
+  --color-d-foreground: var(--d-foreground);
   --color-black: var(--black);
   --color-white: var(--white);
   --color-primary: var(--primary);
